samples/_failures_safe/1761043917_f6c93b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e160077c.c: In function ‘main’:
./samples/SAFE/__tmp_e160077c.c:206:5: error: expected declaration or statement at end of input
  206 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
